Bugfix: Make .sheet’s scrollbar disappear in <1025px viewports
Due to .smileys-link overflowing

--- a/public/style.css
+++ b/public/style.css
@@ -124,7 +124,7 @@ h1, h2, h3 {
   border-width: 1px 0 0;
   padding: 5px 0 10px;
   position: relative;
-  overflow: auto;
+  overflow: hidden;
 }
 
 .body--no-bottom .sheet {
